Df playground to Production (#43)
* try another way to pass google authenticate

* move tmp.json to the right place

* try another way to pass google authenticate

* scrape data for comp9311

* add context implement and set query with current context

* save context into session

* integration test OK, ready to be merged into production
