# backend/app/demo/static/v1/swagger.json
@@ -77,13 +77,17 @@
               "type": "object",
               "required": [
                 "text",
-                "sessionID"
+                "sessionID",
+                "context"
               ],
               "properties": {
                 "text": {
                   "type": "string"
                 },
                 "sessionID": {
+                  "type": "string"
+                },
+                "context": {
                   "type": "string"
                 }
               }
@@ -96,6 +100,9 @@
             "schema": {
               "$ref": "#/definitions/TextResponse"
             }
+          },
+          "400": {
+            "description": "missing essential input value"
           }
         }
       }
